Sun Dec 29 21:24:01 1996  Tom Yu  <tlyu@mit.edu>

	* lib.in: fix typo in profiled lib build

	* libobj.in: random bugfixes

Sat Dec 28 21:46:33 1996  Tom Yu  <tlyu@mit.edu>

	* libobj.in: Cause Makefile to depend on config/libobj.in
	* lib.in: Cause Makefile to depend on config/lib.in

Fri Dec 27 17:06:41 1996  Tom Yu  <tlyu@mit.edu>

	* lib.in: Fix up loops to deal with an OBJS.ST that is in the
	current directory; add a comment documenting possible make
	incompatibility if OBJS.ST is specified as ./OBJS.ST.

	* pre.in:
	* post.in: Fix up recursion to be somewhat saner.
	* lib.in:
	* libobj.in: Add these frags for new library build system.

Tue Dec 24 16:43:45 1996  Tom Yu  <tlyu@mit.edu>

	* config.guess:
	* config.sub: Update from autoconf-2.12.

Mon Nov 11 20:53:01 1996  Tom Yu  <tlyu@mit.edu>

	* pre.in (DEJAFLAGS): Change gmake-dependent $(shell uname foo) to
	use $(host), which will get set by AC_CANONICAL_HOST in
	configure.in.

Thu Oct 31 17:45:21 1996  Sam Hartman  <hartmans@mit.edu>

	* pre.in (FILE_MANDIR): Create $prefix/include/kerberosIV [36]

Mon Oct 21 21:21:43 1996  Tom Yu  <tlyu@mit.edu>

	* pre.in: Substitute for *_RECURSE variables.

	* post.in: Add *-recurse targets for new recursion method.

Fri Oct 18 11:03:24 1996  Barry Jaspan  <bjaspan@mit.edu>

	* pre.in (DEJAFLAGS): s/:=/=/ [PR #117]

Tue Oct 15 16:26:19 1996  Barry Jaspan  <bjaspan@mit.edu>

	* pre.in: add TEST_PATH argument to START_SERVERS and STOP_SERVERS

Thu Oct  3 13:08:40 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* pre.in: Separate KADM5 unit test files to source dir and build
		dir based on how generated.

Mon Sep 23 15:40:04 1996  Barry Jaspan  <bjaspan@mit.edu>

	* pre.in (DEJAFLAGS): set --srcdir $(srcdir) so unit test files
 	don't have to be symlinked to build tree

Fri Oct 18 01:13:19 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* pre.in :  Adjust directories to comply with autoconf standards [37]

Fri Sep 20 16:58:08 1996  Barry Jaspan  <bjaspan@mit.edu>
